--- a/football.html
+++ b/football.html
@@ -1,166 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Umang</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/global.css" rel="stylesheet">
-	<link href="css/details.css?v=1.2" rel="stylesheet">
-	<link href="css/element.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-	<link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
+
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Umang</title>
+   <link href="css/bootstrap.min.css" rel="stylesheet">
+   <link href="css/global.css" rel="stylesheet">
+   <link href="css/details.css?v=1.2" rel="stylesheet">
+   <link href="css/element.css" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+   <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-   <section id="header" class="clearfix" style = "background:#991111">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style = "background:#991111">
-           <div class="container" style = "background:#991111">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-           </button>
-        <a href="index.html"><img src="./img/Umang_logo_white.png"/ width = "200px" height="50px"></a>
-        </div>
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style = "background:#991111">
-                  <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">HOME</a></li>
-     
-                      <!-- <li class="well_1 clearfix"><a href="#"><i class="fa fa-facebook"></i></a></li> -->
-                    <li class="well_1 clearfix"><a href="https://www.instagram.com/umang_iiitb"><i class="fa fa-instagram"></i></a></li>
-                    <!-- <li class="well_1 clearfix"><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-              </div><!-- /.navbar-collapse -->
-           </div><!-- /.container-fluid -->
-        </nav>
-     </section>
+   <section id="header" class="clearfix" style="background:#991111">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#991111">
+         <div class="container" style="background:#991111">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+               <button class="navbar-toggle" type="button" data-toggle="collapse"
+                  data-target="#bs-example-navbar-collapse-1">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+               </button>
+               <a href="index.html"><img src="./img/Umang_logo_white.png" / width="200px" height="50px"></a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#991111">
+               <ul class="nav navbar-nav navbar-right">
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="events.html">Events</a></li>
+                  <li><a href="sponsors.html">Sponsors</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact </a></li>
+                  <li class="well_1 clearfix"><a href="https://www.instagram.com/umang_iiitb"><i
+                           class="fa fa-instagram"></i></a></li>
+               </ul>
+            </div><!-- /.navbar-collapse -->
+         </div><!-- /.container-fluid -->
+      </nav>
+   </section>
 
 
 
 
-<section id="details_main">
- <div class="container myflex">
-  <div class="row">
-   <div class="about_1">
-    <h1 style="color: white;">FOOTBALL</h1>
-   </div>
-  </div>
- </div>
-</section>
-<section id="blog">
-
-
- <div class="container">
-  <div class="row">
-   <div class="blog_1 clearfix myflex">
-    <div class="col-sm-7">
-	 <div class="blog_2">
-	 	<img src="img/football.png" alt="abc" class="img_responsive">
-	  <h3>General Rules</h3>
-	  
-	  <ul style="list-style-type:disc">
-
-
-      <li style = "display: list-item; font-size: 18px;">Partipants have to produce bona fide certificates and institute ID Cards for verification </li>
-      <br>
-  
-      <li style = "display: list-item; font-size: 18px;">Each college may field two teams(Team A, Team B) for each sport.</li>
-      <br>
-      <li style = "display: list-item; font-size: 18px;">No player is allowed to play for more than one team.</li>
-      <br>
-      <li style = "display: list-item; font-size: 18px;">Fixtures and schedule will be sent to the team captain 3-4 days before the tournament. </li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">Under no circumstances will teams be allowed to change their players after registration.</li>
-       <br>
-       <li style = "display: list-item; font-size: 18px;">Accommodation will not be provided for this event.</li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">All events are subject to registrations and availability of venues. </li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">The Sports Committee of IIITB reserves the right to decide on all disputes.</li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">Use of abusive language, directed towards the officials, towards any player or the organizing committee will result in immediate disqualification of the team / individual from the event. </li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">All participants are expected to maintain decorum on all sporting arenas, university campus and related areas. Any altercations / misbehaviour shall be dealt with strictly, and the decision of the Organizing Committee in this regard is final. </li>
-       <br>
-       <li style = "display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the disqualification of the participating institution from Umang 2022 and future events.</li>
-       <br>
-      <li style = "display: list-item; font-size: 18px;">The Convener of Sports Committee (International Institute of Information Technology, Bangalore) reserves the right to change the format or rules as may be necessary at any given point in time. </li>
-
-	  </ul>
-	  <br>
-	  <br>
-	  
-     <h3>Point of Contact</h3>
-      <ul style="list-style-type:disc">
-         <li style = "display: list-item; font-size: 18px;">Jainav - +91 7014006445</li>
-         <li style = "display: list-item; font-size: 18px;">Aditya - +91 8347697898</li>
-      </ul>
-	
-     <h3>Registration</h3>
-
-     <a class="mybutton" href ="https://forms.gle/yoBPbDxmcwiVAxtX9">Men's</a>
-
-<br>
-<br>
-<h3>Rules and Regulations</h3>
-
-	 <a href="https://docs.google.com/document/d/181Idk6nHsSSktoG5rn9yoV2wX-bKcz6qgjXEpVF0R9A/edit?usp=sharing"><button class="button">Download Rules and Regulations</button></a>
-
-</div>
-	 
-	</div>
-   </div>
-  </div>
- </div>
-</section>
-
-
-
-<section id="footer">
-   <div class="container">
-    <div class="row">
-     <div class="footer_main">
-      <!-- <div class="col-sm-2">
-      <div class="footer_1">
-       <h3>About</h3>
-       <ul>
-           <li><a href="#">The Company</a></li>
-          <li><a href="#">Our Values</a></li>
-          <li><a href="#">Responsibility</a></li>
-          <li><a href="#">Our Mission</a></li>
-          <li><a href="#">Opportunity</a></li>
-          <li><a href="#">Safety Concerns</a></li>
-       </ul>
+   <section id="details_main">
+      <div class="container myflex">
+         <div class="row">
+            <div class="about_1">
+               <h1 style="color: white;">FOOTBALL</h1>
+            </div>
+         </div>
       </div>
-     </div> -->
-     
-     <div class="col-sm-2">
-      <div class="footer_2">
-       <h3>Contact Us</h3>
-       <ul>
-           <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-            </svg> 91-7205171588</li>
-            <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
-              <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
-            </svg> 91-9619868548</li>
-          <li><i class="fa fa-envelope"><span style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i></li>
-          <li><i class="fa fa-map-marker"></i><a href="https://goo.gl/maps/hg8iG9G1KQPaQ8N68">International Institute of Information Technology, Bangalore</a></li>
-       </ul>
+   </section>
+   <section id="blog">
+
+
+      <div class="container">
+         <div class="row">
+            <div class="blog_1 clearfix myflex">
+               <div class="col-sm-7">
+                  <div class="blog_2">
+                     <img src="img/football.png" alt="abc" class="img_responsive">
+                     <h3>General Rules</h3>
+
+                     <ul style="list-style-type:disc">
+
+
+                        <li style="display: list-item; font-size: 18px;">Partipants have to produce bona fide
+                           certificates and institute ID Cards for verification </li>
+                        <br>
+
+                        <li style="display: list-item; font-size: 18px;">Each college may field two teams(Team A, Team
+                           B) for each sport.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">No player is allowed to play for more than one
+                           team.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">Fixtures and schedule will be sent to the team
+                           captain 3-4 days before the tournament. </li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">Under no circumstances will teams be allowed to
+                           change their players after registration.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">Accommodation will not be provided for this
+                           event.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">All events are subject to registrations and
+                           availability of venues. </li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">The Sports Committee of IIITB reserves the
+                           right to decide on all disputes.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">Use of abusive language, directed towards the
+                           officials, towards any player or the organizing committee will result in immediate
+                           disqualification of the team / individual from the event. </li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">All participants are expected to maintain
+                           decorum on all sporting arenas, university campus and related areas. Any altercations /
+                           misbehaviour shall be dealt with strictly, and the decision of the Organizing Committee in
+                           this regard is final. </li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
+                           disqualification of the participating institution from Umang 2022 and future events.</li>
+                        <br>
+                        <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
+                           Institute of Information Technology, Bangalore) reserves the right to change the format or
+                           rules as may be necessary at any given point in time. </li>
+
+                     </ul>
+                     <br>
+                     <br>
+
+                     <h3>Point of Contact</h3>
+                     <ul style="list-style-type:disc">
+                        <li style="display: list-item; font-size: 18px;">Jainav - +91 7014006445</li>
+                        <li style="display: list-item; font-size: 18px;">Aditya - +91 8347697898</li>
+                     </ul>
+
+                     <h3>Registration</h3>
+
+                     <a class="mybutton" href="https://forms.gle/yoBPbDxmcwiVAxtX9">Men's</a>
+
+                     <br>
+                     <br>
+                     <h3>Rules and Regulations</h3>
+
+                     <a
+                        href="https://docs.google.com/document/d/181Idk6nHsSSktoG5rn9yoV2wX-bKcz6qgjXEpVF0R9A/edit?usp=sharing"><button
+                           class="button">Download Rules and Regulations</button></a>
+
+                  </div>
+
+               </div>
+            </div>
+         </div>
       </div>
-     </div>
-     </div>
-    </div>
-   </div>
-  </section>
-<script src="js/classie.js"></script> 
-<script src="js/cbpAnimatedHeader.js"></script>
+   </section>
+
+   <script src="js/classie.js"></script>
+   <script src="js/cbpAnimatedHeader.js"></script>
 </body>
+
 </html>
