--- a/sponsors.html
+++ b/sponsors.html
@@ -36,11 +36,12 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="events.html">Events</a></li>
-						<li><a href="sponsors.html">Sponsors</a></li>
-						<li class="active"><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact </a></li>
+						<li class="active"><a href="sponsors.html">Sponsors</a></li>
+						<li><a href="about.html">About</a></li>
+						<li><a href="contact.html">Contact</a></li>
 						<li class="well_1 clearfix"><a href="https://www.instagram.com/umang_iiitb"><i
 									class="fa fa-instagram"></i></a></li>
+					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
@@ -53,7 +54,7 @@
 		<div class="container myflex">
 			<div class="row">
 				<div class="about_1">
-					<h1 style="color: white;">About</h1>
+					<h1 style="color: white;">Sponsors</h1>
 				</div>
 			</div>
 		</div>
@@ -61,93 +62,6 @@
 	<section id="blog">
 
 
-		<div class="container">
-			<div class="row">
-				<div class="blog_1 clearfix myflex">
-					<div class="col-sm-7">
-						<div class="blog_2">
-							<img src="img/basketball.png" alt="abc" class="img_responsive">
-							<h3>General Rules</h3>
-
-							<ul style="list-style-type:disc">
-
-
-								<li style="display: list-item; font-size: 18px;">Partipants have to produce bona fide
-									certificates and institute ID Cards for verification </li>
-								<br>
-
-								<li style="display: list-item; font-size: 18px;">Each college may field two teams(Team
-									A, Team B) for each sport.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">No player is allowed to play for more
-									than one team.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">Fixtures and schedule will be sent to
-									the team captain 3-4 days before the tournament. </li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">Under no circumstances will teams be
-									allowed to change their players after registration.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">Accommodation will not be provided for
-									this event.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">All events are subject to registrations
-									and availability of venues. </li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">The Sports Committee of IIITB reserves
-									the right to decide on all disputes.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">Use of abusive language, directed
-									towards the officials, towards any player or the organizing committee will result in
-									immediate disqualification of the team / individual from the event. </li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">All participants are expected to
-									maintain decorum on all sporting arenas, university campus and related areas. Any
-									altercations / misbehaviour shall be dealt with strictly, and the decision of the
-									Organizing Committee in this regard is final. </li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result
-									in the disqualification of the participating institution from Umang 2022 and future
-									events.</li>
-								<br>
-								<li style="display: list-item; font-size: 18px;">The Convener of Sports Committee
-									(International Institute of Information Technology, Bangalore) reserves the right to
-									change the format or rules as may be necessary at any given point in time. </li>
-
-							</ul>
-							<br>
-							<br>
-
-							<h3>Point of Contact</h3>
-							<ul style="list-style-type:disc">
-								<li style="display: list-item; font-size: 18px;">Nandakishore - +91 9188016258</li>
-								<li style="display: list-item; font-size: 18px;">Keshav - +91 9029772668</li>
-							</ul>
-
-							<h3>Registration</h3>
-
-							<a class="mybutton" href="https://forms.gle/8RZ2JYDNoYoD1crc8">Men's (5v5)</a>
-							<a class="mybutton" href="https://forms.gle/CfZ4xPpFAKfoobhf7">Women's (3v3)</a>
-
-							<br>
-							<br>
-							<h3>Rules and Regulations</h3>
-
-							<a
-								href="https://docs.google.com/document/d/114Oca9KcYKP2vdJTXUqfPMI3ft2jL0hKpJOrlFom4fw/edit?usp=sharing"><button
-									class="button">Download Rules and Regulations</button></a>
-
-						</div>
-
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-
-	<!-- <section id="footer">
 		<div class="container">
 			<div class="row">
 				<div class="footer_main">
@@ -177,7 +91,8 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
+
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 </body>
