--- a/chess.html
+++ b/chess.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-   <section id="header" class="clearfix" style="background:#991111">
-      <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#991111">
-         <div class="container" style="background:#991111">
+   <section id="header" class="clearfix" style="background:#0e055f">
+      <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#0e055f">
+         <div class="container" style="background:#0e055f">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                <button class="navbar-toggle" type="button" data-toggle="collapse"
@@ -32,7 +32,7 @@
                <a href="index.html"><img src="./img/Umang_logo_white.png" / width="200px" height="50px"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#991111">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#0e055f">
                <ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="events.html">Events</a></li>
