--- a/events.html
+++ b/events.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-	<section id="header" class="clearfix" style="background:#991111">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#991111">
-			<div class="container" style="background:#991111">
+	<section id="header" class="clearfix" style="background:#0e055f">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#0e055f">
+			<div class="container" style="background:#0e055f">
 				<!-- Brand and toggle get grouped for better mobile display -->
 				<div class="navbar-header">
 					<button class="navbar-toggle" type="button" data-toggle="collapse"
@@ -29,10 +29,10 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="index.html"><img src="./img/Umang_logo_white.png" / width="200px" height="50px"></a>
+					<a href="index.html"><img src="./img/Umang_logo_white.png" width="200px" height="50px"></a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#991111">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#0e055f">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Home</a></li>
 						<li class="active"><a href="events.html">Events</a></li>
@@ -75,7 +75,7 @@
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">BASKETBALL</h2>
+												<h2 style="color: #0e055f;">BASKETBALL</h2>
 												<br>
 											</div>
 										</div>
@@ -97,7 +97,7 @@
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">BADMINTON</h2>
+												<h2 style="color: #0e055f;">BADMINTON</h2>
 												<br>
 											</div>
 										</div>
@@ -119,7 +119,7 @@
 									<div class="news_4 clearfix myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">THROWBALL</h2>
+												<h2 style="color: #0e055f;">THROWBALL</h2>
 											</div>
 										</div>
 									</div>
@@ -140,7 +140,7 @@
 									<div class="news_4 clearfix myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">VOLLEYBALL</h2>
+												<h2 style="color: #0e055f;">VOLLEYBALL</h2>
 											</div>
 										</div>
 									</div>
@@ -162,7 +162,7 @@
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">FOOTBALL</h2>
+												<h2 style="color: #0e055f;">FOOTBALL</h2>
 											</div>
 										</div>
 									</div>
@@ -184,7 +184,7 @@
 									<div class="news_4 clearfix  myflex">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">TABLE TENNIS</h2>
+												<h2 style="color: #0e055f;">TABLE TENNIS</h2>
 											</div>
 										</div>
 									</div>
@@ -206,7 +206,7 @@
 									<div class="news_4 clearfix">
 										<div class="col-sm-12 space_all">
 											<div class="news_6">
-												<h2 style="color: white;">CHESS</h2>
+												<h2 style="color: #0e055f;">CHESS</h2>
 											</div>
 										</div>
 									</div>
