--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 <body id="body_id"
-	style="background:url('img/1.jpg') #ff0000; background-attachment: fixed ; background-size: contain;background-repeat: no-repeat;">
+	style="background:url('img/1.jpg') #0e055f; background-attachment: fixed ; background-size: cover;background-repeat: no-repeat;">
 
-	<section id="header" class="clearfix" style="background:#991111">
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#991111">
-			<div class="container" style="background:#991111">
+	<section id="header" class="clearfix" style="background:#0e055f">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background:#0e055f">
+			<div class="container" style="background:#0e055f">
 				<div class="navbar-header">
 					<button class="navbar-toggle" type="button" data-toggle="collapse"
 						data-target="#bs-example-navbar-collapse-1">
@@ -30,9 +30,9 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a href="index.html"><img src="./img/Umang_logo_white.png" / width="200px" height="50px"></a>
+					<a href="index.html"><img src="./img/Umang_logo_white.png" width="200px" height="50px"></a>
 				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#991111">
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#0e055f">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a href="events.html">Events</a></li>
