--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 		</div>
 	</section>
 
-	<!-- <section id="footer">
+	<section id="footer">
 		<div class="container">
 			<div class="row">
 				<div class="footer_main">
@@ -104,7 +104,7 @@
 											style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i>
 								</li>
 								<li><i class="fa fa-map-marker"></i><a
-										href="https://goo.gl/maps/hg8iG9G1KQPaQ8N68">International Institute of
+										href="https://maps.app.goo.gl/gnkwzvuP3n5ueCy9A">International Institute of
 										Information Technology, Bangalore</a></li>
 							</ul>
 						</div>
@@ -112,7 +112,7 @@
 				</div>
 			</div>
 		</div>
-	</section> -->
+	</section>
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 </body>
