--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 			<div class="row">
 				<div class="footer_main">
 					<div class="col-sm-2">
-						<div class="footer_2">
+						<div class="contact_style">
 							<h3>Contact </h3>
 							<ul>
 								<li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -82,7 +82,7 @@
 											style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i>
 								</li>
 								<li><i class="fa fa-map-marker"></i><a
-										href="https://goo.gl/maps/hg8iG9G1KQPaQ8N68">International Institute of
+										href="https://maps.app.goo.gl/gnkwzvuP3n5ueCy9A">International Institute of
 										Information Technology, Bangalore</a></li>
 							</ul>
 						</div>
@@ -116,7 +116,7 @@
 											style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i>
 								</li>
 								<li><i class="fa fa-map-marker"></i><a
-										href="https://goo.gl/maps/hg8iG9G1KQPaQ8N68">International Institute of
+										href="https://maps.app.goo.gl/gnkwzvuP3n5ueCy9A">International Institute of
 										Information Technology, Bangalore</a></li>
 							</ul>
 						</div>
