--- a/sponsors.html
+++ b/sponsors.html
@@ -60,8 +60,20 @@
 		</div>
 	</section>
 	<section id="blog">
+		<div class="container">
+			<div class="row">
+				<div class="blog_1 clearfix myflex">
+					<div class="col-sm-7">
+						<div class="about">
+							<h3 style=" color: #0e055f;">Coming Soon!!!</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-
+	<section id="footer">
 		<div class="container">
 			<div class="row">
 				<div class="footer_main">
@@ -83,7 +95,7 @@
 											style="font-family: 'Philosopher', sans-serif; ">SportsComm@iiitb.ac.in</span></i>
 								</li>
 								<li><i class="fa fa-map-marker"></i><a
-										href="https://goo.gl/maps/hg8iG9G1KQPaQ8N68">International Institute of
+										href="https://maps.app.goo.gl/gnkwzvuP3n5ueCy9A">International Institute of
 										Information Technology, Bangalore</a></li>
 							</ul>
 						</div>
