--- a/powerlifting.html
+++ b/powerlifting.html
@@ -34,15 +34,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="background:#0e055f">
                <ul class="nav navbar-nav navbar-right">
-                  <ul class="nav navbar-nav navbar-right">
-                     <li><a href="index.html">Home</a></li>
-                     <li class="active"><a href="events.html">Events</a></li>
-                     <li><a href="sponsors.html">Sponsors</a></li>
-                     <li><a href="about.html">About</a></li>
-                     <li><a href="contact.html">Contact </a></li>
-                     <li class="well_1 clearfix"><a href="https://www.instagram.com/umang_iiitb"><i
-                              class="fa fa-instagram"></i></a></li>
-                  </ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active"><a href="events.html">Events</a></li>
+                  <li><a href="sponsors.html">Sponsors</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact </a></li>
+                  <li class="well_1 clearfix"><a href="https://www.instagram.com/umang_iiitb"><i
+                           class="fa fa-instagram"></i></a></li>
+               </ul>
             </div><!-- /.navbar-collapse -->
          </div><!-- /.container-fluid -->
       </nav>
@@ -52,22 +51,23 @@
 
 
    <section id="details_main">
-      <div class="container  myflex">
+      <div class="container myflex">
          <div class="row">
             <div class="about_1">
-               <h1 style="color: white;">BADMINTON</h1>
+               <h1 style="color: white;">POWER LIFTING</h1>
             </div>
          </div>
       </div>
    </section>
-
    <section id="blog">
+
+
       <div class="container">
          <div class="row">
-            <div class="blog_1 clearfix  myflex">
+            <div class="blog_1 clearfix myflex">
                <div class="col-sm-7">
                   <div class="blog_2">
-                     <img src="img/badminton.png" alt="abc" class="img_responsive">
+                     <img src="img/power_lifting.png" alt="abc" class="img_responsive">
                      <h3>General Rules</h3>
 
                      <ul style="list-style-type:disc">
@@ -77,17 +77,17 @@
                            certificates and institute ID Cards for verification </li>
                         <br>
 
-                        <li style="display: list-item; font-size: 18px;">Each college may field two teams(Team A,
-                           Team B) for each sport.</li>
+                        <li style="display: list-item; font-size: 18px;">Each college may field two teams(Team A, Team
+                           B) for each sport.</li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">No player is allowed to play for more than
-                           one team.</li>
+                        <li style="display: list-item; font-size: 18px;">No player is allowed to play for more than one
+                           team.</li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">Fixtures and schedule will be sent to the
-                           team captain 3-4 days before the tournament. </li>
+                        <li style="display: list-item; font-size: 18px;">Fixtures and schedule will be sent to the team
+                           captain 3-4 days before the tournament. </li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">Under no circumstances will teams be allowed
-                           to change their players after registration.</li>
+                        <li style="display: list-item; font-size: 18px;">Under no circumstances will teams be allowed to
+                           change their players after registration.</li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">Accommodation will not be provided for this
                            event.</li>
@@ -98,8 +98,8 @@
                         <li style="display: list-item; font-size: 18px;">The Sports Committee of IIITB reserves the
                            right to decide on all disputes.</li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">Use of abusive language, directed towards
-                           the officials, towards any player or the organizing committee will result in immediate
+                        <li style="display: list-item; font-size: 18px;">Use of abusive language, directed towards the
+                           officials, towards any player or the organizing committee will result in immediate
                            disqualification of the team / individual from the event. </li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">All participants are expected to maintain
@@ -107,13 +107,12 @@
                            misbehaviour shall be dealt with strictly, and the decision of the Organizing Committee in
                            this regard is final. </li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in
-                           the disqualification of the participating institution from Umang 2022 and future events.
-                        </li>
+                        <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
+                           disqualification of the participating institution from Umang 2022 and future events.</li>
                         <br>
-                        <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee
-                           (International Institute of Information Technology, Bangalore) reserves the right to
-                           change the format or rules as may be necessary at any given point in time. </li>
+                        <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
+                           Institute of Information Technology, Bangalore) reserves the right to change the format or
+                           rules as may be necessary at any given point in time. </li>
 
                      </ul>
                      <br>
@@ -121,21 +120,19 @@
 
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
-                        <li style="display: list-item; font-size: 18px;">Vismaya - +91 7043341428</li>
-                        <li style="display: list-item; font-size: 18px;">Yathin - +91 7998671111</li>
+                        <li style="display: list-item; font-size: 18px;">Lalith - +91 9739611009</li>
+                        <li style="display: list-item; font-size: 18px;">Shathir - +91 8522006545</li>
                      </ul>
-
                      <h3>Registration</h3>
 
-                     <a class="mybutton" href="https://forms.gle/iFuktyimbzWTNbE69">Men's</a>
-                     <a class="mybutton" href="https://forms.gle/WoM9s1D5inpSAdLr9">Women's</a>
+                     <a class="mybutton" href="https://forms.gle/jaD1zWWQrks7jKgw7">Men's</a>
 
                      <br>
                      <br>
                      <h3>Rules and Regulations</h3>
 
                      <a
-                        href="https://docs.google.com/document/d/1CpeAGvHWkVeHKojhwJvj9hpfHe1A-8Z_/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
+                        href="https://docs.google.com/document/d/1Oitz9Lp6sKxsczqsHvpljm76rsaJ5BT3/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
