--- a/about.html
+++ b/about.html
@@ -82,6 +82,20 @@
 		</div>
 	</section>
 
+	<section id="blog">
+		<div class="container">
+			<div class="row">
+				<div class="blog_1 clearfix myflex">
+					<div class="col-sm-7">
+						<div class="blog_2">
+							<h3>Gallery</h3>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section id="footer">
 		<div class="container">
 			<div class="row">
