--- a/about.html
+++ b/about.html
@@ -82,14 +82,234 @@
 		</div>
 	</section>
 
-	<section id="blog">
+	<!-- <section id="blog">
 		<div class="container">
 			<div class="row">
 				<div class="blog_1 clearfix myflex">
-					<div class="col-sm-7">
+					<div class="col-sm-9">
 						<div class="blog_2">
 							<h3>Gallery</h3>
 						</div>
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC1.JPG">
+									<img src="img/gallery/PIC1.JPG" alt="Image 1" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC2.JPG">
+									<img src="img/gallery/PIC2.JPG" alt="Image 2" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC3.JPG">
+									<img src="img/gallery/PIC3.JPG" alt="Image 3" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC4.JPG">
+									<img src="img/gallery/PIC4.JPG" alt="Image 4" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC5.JPG">
+									<img src="img/gallery/PIC5.JPG" alt="Image 5" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC6.JPG">
+									<img src="img/gallery/PIC6.JPG" alt="Image 6" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC7.JPG">
+									<img src="img/gallery/PIC7.JPG" alt="Image 7" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC8.JPG">
+									<img src="img/gallery/PIC8.JPG" alt="Image 8" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC9.JPG">
+									<img src="img/gallery/PIC9.JPG" alt="Image 9" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC10.JPG">
+									<img src="img/gallery/PIC10.JPG" alt="Image 10" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PIC11.JPG">
+									<img src="img/gallery/PIC11.JPG" alt="Image 11" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PICS1.JPG">
+									<img src="img/gallery/PICS1.JPG" alt="Image 12" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PICS2.JPG">
+									<img src="img/gallery/PICS2.JPG" alt="Image 13" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PICS3.JPG">
+									<img src="img/gallery/PICS3.JPG" alt="Image 14" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PICS4.JPG">
+									<img src="img/gallery/PICS4.JPG" alt="Image 15" width="600" height="400">
+								</a>
+							</div>
+						</div>
+
+						<div class="responsive">
+							<div class="gallery">
+								<a target="_blank" href="img/gallery/PICS5.JPG">
+									<img src="img/gallery/PICS5.JPG" alt="Image 16" width="600" height="400">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section> -->
+
+	<section id="blog">
+		<div class="container">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+					<li data-target="#myCarousel" data-slide-to="1"></li>
+					<li data-target="#myCarousel" data-slide-to="2"></li>
+					<li data-target="#myCarousel" data-slide-to="3"></li>
+					<li data-target="#myCarousel" data-slide-to="4"></li>
+					<li data-target="#myCarousel" data-slide-to="5"></li>
+					<li data-target="#myCarousel" data-slide-to="6"></li>
+					<li data-target="#myCarousel" data-slide-to="7"></li>
+					<li data-target="#myCarousel" data-slide-to="8"></li>
+					<li data-target="#myCarousel" data-slide-to="9"></li>
+					<li data-target="#myCarousel" data-slide-to="10"></li>
+					<li data-target="#myCarousel" data-slide-to="11"></li>
+					<li data-target="#myCarousel" data-slide-to="12"></li>
+					<li data-target="#myCarousel" data-slide-to="13"></li>
+					<li data-target="#myCarousel" data-slide-to="14"></li>
+					<li data-target="#myCarousel" data-slide-to="15"></li>
+				</ol>
+
+				<!-- Wrapper for slides -->
+				<div class="carousel-inner">
+					<div class="item active">
+						<img src="img/gallery/PIC1.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC2.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC3.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC4.JPG" style="width:100%;">
+					</div>
+					<div class="item">
+						<img src="img/gallery/PIC5.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC6.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC7.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC8.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC9.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC10.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PIC11.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PICS1.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PICS2.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PICS3.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PICS4.JPG" style="width:100%;">
+					</div>
+
+					<div class="item">
+						<img src="img/gallery/PICS5.JPG" style="width:100%;">
 					</div>
 				</div>
 			</div>
@@ -127,6 +347,11 @@
 			</div>
 		</div>
 	</section>
+
+
+
+
+
 	<script src="js/classie.js"></script>
 	<script src="js/cbpAnimatedHeader.js"></script>
 </body>
