--- a/badminton.html
+++ b/badminton.html
@@ -127,14 +127,15 @@
 
                      <h3>Registration</h3>
 
-                     <a class="mybutton" href="https://forms.gle/iFuktyimbzWTNbE69">Men's</a>
-                     <a class="mybutton" href="https://forms.gle/WoM9s1D5inpSAdLr9">Women's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/dyHTi5ni12GkVEbK7">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/xseonZgf2d3YtKtw6">Women's (1 vs 1)</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/pqyKVmHWnVytRsVY9">Mixed Doubles</a>
 
                      <br>
                      <br>
                      <h3>Rules and Regulations</h3>
 
-                     <a
+                     <a target="_blank"
                         href="https://docs.google.com/document/d/1CpeAGvHWkVeHKojhwJvj9hpfHe1A-8Z_/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
                            class="button">Download Rules and Regulations</button></a>
 
