--- a/football.html
+++ b/football.html
@@ -126,13 +126,13 @@
 
                      <h3>Registration</h3>
 
-                     <a class="mybutton" href="https://forms.gle/yoBPbDxmcwiVAxtX9">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/FhM4ecgCoiAmNZfEA">Men's</a>
 
                      <br>
                      <br>
                      <h3>Rules and Regulations</h3>
 
-                     <a
+                     <a target="_blank"
                         href="https://docs.google.com/document/d/181Idk6nHsSSktoG5rn9yoV2wX-bKcz6qgjXEpVF0R9A/edit?usp=sharing"><button
                            class="button">Download Rules and Regulations</button></a>
 
