--- a/table_tennis.html
+++ b/table_tennis.html
@@ -126,13 +126,14 @@
 
                      <h3>Registration</h3>
 
-                     <a class="mybutton" href="https://forms.gle/LQVcWLtMuRefHEeL7">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/7k99GQEoYSZqB61W6">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/ckBfrRhx6QLjXdvf8">Women's</a>
 
                      <br>
                      <br>
                      <h3>Rules and Regulations</h3>
 
-                     <a href="https://drive.google.com/file/d/1dkoGp_9YkUpDxpcH6Gr0kzsDPRcmLFqI/view?usp=sharing"><button
+                     <a target="_blank" href="https://drive.google.com/file/d/1dkoGp_9YkUpDxpcH6Gr0kzsDPRcmLFqI/view?usp=sharing"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
