--- a/volleyball.html
+++ b/volleyball.html
@@ -125,13 +125,13 @@
                      </ul>
                      <h3>Registration</h3>
 
-                     <a class="mybutton" href="https://forms.gle/jaD1zWWQrks7jKgw7">Men's</a>
+                     <a target="_blank" class="mybutton" href="https://forms.gle/vk1nKWzDtkKNync77">Men's</a>
 
                      <br>
                      <br>
                      <h3>Rules and Regulations</h3>
 
-                     <a
+                     <a target="_blank"
                         href="https://docs.google.com/document/d/1Oitz9Lp6sKxsczqsHvpljm76rsaJ5BT3/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
                            class="button">Download Rules and Regulations</button></a>
 
