--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 		<h3 style="color: white;display:inline">Just </h3>
 		<h3 id="timer" style="color: white;display:inline"></h3>
 		<h3 style="color: white;display:inline">to go !!! </h3>
-		
 	</div>
 
 	<section id="footer">
@@ -124,6 +123,11 @@
 				document.getElementById("timer").innerHTML = "0 days "
 			}
 		}, 1000);
+	</script>
+	<script>
+		$(document.body).click(function () {
+			window.location.href = './events.html';
+		});
 	</script>
 </body>
 
