--- a/volleyball.html
+++ b/volleyball.html
@@ -120,8 +120,8 @@
 
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
-                        <li style="display: list-item; font-size: 18px;">Lalith - +91 9739611009</li>
-                        <li style="display: list-item; font-size: 18px;">Shathir - +91 8522006545</li>
+                        <li style="display: list-item; font-size: 18px;">Jack - +91 7207537377</li>
+                        <li style="display: list-item; font-size: 18px;">Gowtham - +91 76758 87136</li>
                      </ul>
                      <h3>Registration</h3>
 
