--- a/throwball.html
+++ b/throwball.html
@@ -120,8 +120,8 @@
 
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
-                        <li style="display: list-item; font-size: 18px;">Rachna - +91 9113983604</li>
-                        <li style="display: list-item; font-size: 18px;">Aripitha - +91 9845203411</li>
+                        <li style="display: list-item; font-size: 18px;">Avantika - +91 8179640318</li>
+                        <li style="display: list-item; font-size: 18px;">Yukta - +91 7022095151</li>
                      </ul>
 
                      <h3>Registration</h3>
