--- a/table_tennis.html
+++ b/table_tennis.html
@@ -121,7 +121,7 @@
                      <h3>Point of Contact</h3>
                      <ul style="list-style-type:disc">
                         <li style="display: list-item; font-size: 18px;">Adrij Sharma - +91 8439812886</li>
-                        <li style="display: list-item; font-size: 18px;">Sukhamjot Singh - +91 7379249679</li>
+                        <li style="display: list-item; font-size: 18px;">Chinmay Parekh - +91 9619868548</li>
                      </ul>
 
                      <h3>Registration</h3>
@@ -133,7 +133,7 @@
                      <br>
                      <h3>Rules and Regulations</h3>
 
-                     <a target="_blank" href="https://drive.google.com/file/d/1dkoGp_9YkUpDxpcH6Gr0kzsDPRcmLFqI/view?usp=sharing"><button
+                     <a target="_blank" href="https://in.docs.wps.com/l/sIJH1kPaGAb_UkKkG?v=v2"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
