--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 								to miss. Umang isn't just about winning, it's about the journey. Whether you're a
 								participant or a supporter, these exhilarating days will craft memories. Gear up for a
 								thrilling and frolicsome experience like no other! Don't miss your chance to be part of
-								the Umang legacy.at will stay with you forever.</h3>
+								the Umang legacy that will stay with you forever.</h3>
 						</div>
 					</div>
 				</div>
