--- a/basketball.html
+++ b/basketball.html
@@ -104,7 +104,7 @@
                            this regard is final. </li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
-                           disqualification of the participating institution from Umang 2022 and future events.</li>
+                           disqualification of the participating institution from Umang 2023 and future events.</li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
                            Institute of Information Technology, Bangalore) reserves the right to change the format or
@@ -131,7 +131,7 @@
                      <h3>Rules and Regulations</h3>
 
                      <a target="_blank"
-                        href="https://docs.google.com/document/d/114Oca9KcYKP2vdJTXUqfPMI3ft2jL0hKpJOrlFom4fw/edit?usp=sharing"><button
+                        href="https://docs.google.com/document/d/18SxbxibGatCAf1iRCr2l72iX3ZWQK0qRHKsNkChAKu0/edit?usp=drivesdk"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
