--- a/chess.html
+++ b/chess.html
@@ -108,7 +108,7 @@
                            this regard is final. </li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
-                           disqualification of the participating institution from Umang 2022 and future events.</li>
+                           disqualification of the participating institution from Umang 2023 and future events.</li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
                            Institute of Information Technology, Bangalore) reserves the right to change the format or
@@ -135,7 +135,7 @@
                      <h3>Rules and Regulations</h3>
 
                      <a target="_blank"
-                        href="https://docs.google.com/document/d/1e1GQqaP0fmkhZlOVXSNkhXUfWg-Mub7T/edit?usp=sharing&ouid=107229252669072287337&rtpof=true&sd=true"><button
+                        href="https://docs.google.com/document/d/e/2PACX-1vSFsvghHpxOPSUQOAZdIRw59-ilk_pgr_Pky0QQDj7iapjsL54G5Xyj4mwcinSD5Ruv5GalNPF7YbF5/pub"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
