--- a/throwball.html
+++ b/throwball.html
@@ -108,7 +108,7 @@
                            this regard is final. </li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">Any altercation/misbehaviourmay result in the
-                           disqualification of the participating institution from Umang 2022 and future events.</li>
+                           disqualification of the participating institution from Umang 2023 and future events.</li>
                         <br>
                         <li style="display: list-item; font-size: 18px;">The Convener of Sports Committee (International
                            Institute of Information Technology, Bangalore) reserves the right to change the format or
@@ -133,7 +133,7 @@
                      <h3>Rules and Regulations</h3>
 
                      <a target="_blank"
-                        href="https://docs.google.com/document/d/1nKX6GkEcjwR1pqt5VJbBLyaUaB6o_1KIPzQ8ElSuOiI/edit?usp=sharing"><button
+                        href="https://docs.google.com/document/d/e/2PACX-1vTXvgKEIxYx3JnQKmefA5XvBrAyvvv1uCjI5qcTk5V4618RIckTvazSvE3mbeN4bQ/pub"><button
                            class="button">Download Rules and Regulations</button></a>
 
                   </div>
